welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: '(' expected but '{' found.
    if{die1==6 && die2==6}{return die2+1}
      ^withoutDoubles:5: error: illegal start of simple expression
  }
  ^